# CodeLinker

./: .gitignore  README.md  pyproject.toml
.github/: publish-to-pypi.yml
.github/workflows/: publish-to-pypi.yml
codelinker/: __init__.py  config.py  linker.py  utils.py
codelinker/events/: __init__.py  processer.py  sink.py
codelinker/models/: __init__.py  labels.py  sink.py  structuredRet.py
codelinker/request/: __init__.py  objGen.py  openai.py
docs/: configuration.md  structuredgen.md
